Added icons for creating shapes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <body>
   <h1>simmy.js</h1>
   <canvas id = 'canvas' width="1000" height="500"></canvas>
+  <img id='square' src='images/square.png' width="25"><br>
+  <img id='triangle' src="images/triangle.png" width="25">
+  <h1 id='none'>none</h1>
   <script src='js/app.js'></script>
 </body>
 </html>
