Added a few shapes and delete functionality

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <h1>simmy.js</h1>
-  <canvas id = 'canvas' width="1000" height="500"></canvas>
+  <canvas id = 'canvas' width="1000" height="600"></canvas>
   <img id='square' src='images/square.png' width="25"><br>
   <img id='triangle' src="images/triangle.png" width="25">
   <img id='pentagon' src="images/pentagon.png" width="25">
@@ -14,8 +14,11 @@
   <img id='arrow' src="images/arrow.png" width="29">
   <img id='star' src="images/star.png" width="32">
   <img id='tShape' src="images/tShape.png" width="30">
-
+  <img id='bar' src="images/bar.png" width="10">
+  <img id='box' src="images/box.png" width="25">
+  <h1 id='concave'>C</h1>
   <h1 id='none'>none</h1>
+  <h1 id='delete'>delete</h1>
   <script src='js/app.js'></script>
 </body>
 </html>
