--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
   <img id='bar' src="images/bar.png" width="10">
   <img id='box' src="images/box.png" width="25">
   <h1 id='concave'>C</h1>
-  <h1 id='none'>none</h1>
-  <h1 id='delete'>delete</h1>
+  <h1 class='selected' id='none'>none</h1>
+  <h1 id='_delete'>delete</h1>
+  <script src='js/shapes.js'></script>
   <script src='js/app.js'></script>
 </body>
 </html>
