--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <h1 id='concave'>C</h1>
   <h1 class='selected' id='none'>none</h1>
   <h1 id='_delete'>delete</h1>
+  <script src='js/maths.js'></script>
+  <script src='js/helper.js'></script>
+  <script src='js/ui.js'></script>
   <script src='js/shapes.js'></script>
   <script src='js/app.js'></script>
 </body>
