Made motion time driven

--- a/index.html
+++ b/index.html
@@ -5,20 +5,23 @@
 <body>
   <h1>simmy.js</h1>
   <canvas id = 'canvas' width="1000" height="600"></canvas>
-  <img id='square' src='images/square.png' width="25"><br>
-  <img id='triangle' src="images/triangle.png" width="25">
-  <img id='pentagon' src="images/pentagon.png" width="25">
-  <img id='hexagon' src="images/hexagon.png" width="30">
-  <img id='circle' src="images/circle.png" width="29">
-  <img id='plus' src="images/plus.png" width="29">
-  <img id='arrow' src="images/arrow.png" width="29">
-  <img id='star' src="images/star.png" width="32">
-  <img id='tShape' src="images/tShape.png" width="30">
-  <img id='bar' src="images/bar.png" width="10">
-  <img id='box' src="images/box.png" width="25">
-  <h1 id='concave'>C</h1>
-  <h1 class='selected' id='none'>none</h1>
-  <h1 id='_delete'>delete</h1>
+  <div id='wrapper'>
+    <img id='play' src='images/play.png' width="25"><br>
+    <img id='square' src='images/square.png' width="25"><br>
+    <img id='triangle' src="images/triangle.png" width="25">
+    <img id='pentagon' src="images/pentagon.png" width="25">
+    <img id='hexagon' src="images/hexagon.png" width="30">
+    <img id='circle' src="images/circle.png" width="29">
+    <img id='plus' src="images/plus.png" width="29">
+    <img id='arrow' src="images/arrow.png" width="29">
+    <img id='star' src="images/star.png" width="32">
+    <img id='tShape' src="images/tShape.png" width="30">
+    <img id='bar' src="images/bar.png" width="10">
+    <img id='box' src="images/box.png" width="25">
+    <h1 id='concave'>C</h1>
+    <h1 class='selected' id='none'>none</h1>
+    <h1 id='_delete'>delete</h1>
+  </div>
   <script src='js/maths.js'></script>
   <script src='js/helper.js'></script>
   <script src='js/ui.js'></script>
