--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
     <h1 class='selected' id='none'>none</h1>
     <h1 id='_delete'>delete</h1>
   </div>
+  <script src="js/lib/dat.gui.js"></script>
   <script src='js/maths.js'></script>
   <script src='js/helper.js'></script>
   <script src='js/ui.js'></script>
   <script src='js/shapes.js'></script>
   <script src='js/app.js'></script>
+  <script src='js/display.js'></script>
 </body>
 </html>
