--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <h1 class='selected' id='none'>none</h1>
     <h1 id='_delete'>delete</h1>
   </div>
+  <script src="node_modules/stats-js/src/Stats.js"></script>  
   <script src="js/lib/dat.gui.js"></script>
   <script src='js/maths.js'></script>
   <script src='js/helper.js'></script>
